# ecc-init

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE_CODE_FIXLIST_0.2.0A1.md  CLAUDE_CODE_FIXLIST_ROUND2_0.2.0A1.md  CODEX_NEXT_PLAN_GSD_APPLY.md  DEVELOPMENT_PLAN_CODEX.md  LICENSE  MIGRATION.md  NOTICE.md  README.md  SECURITY.md  SOURCE_POLICY.md  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml  nightly-network-e2e.yml
docs/e2e/: 0.2.0-alpha.md  manual-alpha-smoke.md
docs/how-to/: apply-packs.md  audit-and-rollback.md  install-gsd.md
docs/internal/: CURRENT_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  NEXT_PHASE_PLAN_0.2.0A2.md
scripts/: check_wheel_contents.py  cli_smoke.py  release_dry_run.py
src/ecc_init/: __init__.py  app.py  apply.py  backup.py  cli.py  detect.py  errors.py  frontend.py  merge.py  paths.py  project.py  resources.py  sync.py  util.py
src/ecc_init/core/: __init__.py  models.py  ownership.py  plan.py  receipt.py  state_store.py  transaction.py  validation.py
src/ecc_init/migration/: __init__.py  legacy_v1.py  reports.py
src/ecc_init/packs/: __init__.py  gsd_bridge.py  installer.py  registry.py  resolver.py
src/ecc_init/resources/: manifest.json
src/ecc_init/resources/global_skills/code-review/: SKILL.md
src/ecc_init/resources/global_skills/code-tour/: SKILL.md
src/ecc_init/resources/global_skills/dev-retrospective/: SKILL.md
src/ecc_init/resources/global_skills/security-review/: SKILL.md
src/ecc_init/resources/global_skills/task-planning/: SKILL.md
src/ecc_init/resources/registry/: registry.json
src/ecc_init/resources/templates/: DEVELOPMENT_LOG.md  FRONTEND_LIFECYCLE.md  PROJECT_OVERVIEW.md  global_CLAUDE.md  project_CLAUDE.md
src/ecc_init/sources/: __init__.py  locks.py  providers.py  verify.py
src/ecc_init/workflows/: __init__.py  base.py  gsd.py  none.py  registry.py
tests/: test_app.py  test_apply.py  test_cli.py  test_core_models.py  test_detect.py  test_e2e_apply_bundled.py  test_frontend.py  test_gsd_bridge.py  test_gsd_install_cli.py  test_lifecycle_cli.py  test_merge.py  test_migration.py  test_network_e2e.py  test_ownership.py  test_packs.py  test_security_release.py  test_sources.py  test_stack_packs.py  test_state_store.py  test_transaction.py  test_workflows.py
tests/fixtures/projects/empty/: README.md
tests/fixtures/projects/existing-gsd-config/: pyproject.toml
tests/fixtures/projects/fastapi-langgraph/: pyproject.toml
tests/fixtures/projects/react-vite/: package.json  tsconfig.json
(+17 files in other folders)
