[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecc-init"
version = "0.1.0"
description = "A lightweight Claude Code configuration initializer inspired by selected ECC patterns."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "ecc-init local toolkit" }
]
keywords = ["claude-code", "ecc", "skills", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Code Generators"
]
dependencies = []

[project.scripts]
ecc-init = "ecc_init.cli:main"

[project.urls]
Repository = "https://github.com/affaan-m/ECC"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ecc_init = [
  "resources/*.json",
  "resources/templates/*.md",
  "resources/global_skills/*/*.md",
  "resources/project_skills/*/*.md"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
